# tomlinc

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  example.c  example.toml  output.toml
include/: tomlinc.h
src/: tomlinc.c  tomlinc_internal.c  tomlinc_internal.h
